feat: start / stop / show timer
Squashed commit of the following:

commit b4c3c3d4984d52d1890aec1aae1dc881817227bf
Author: alswl <alswlx@gmail.com>
Date:   Sun Nov 6 23:41:51 2022 +0800

    fix: refresh blocking, only one refresh in the same time

commit eb7f1fa7bdec6c2aa2f235db787d42018808c512
Author: alswl <alswlx@gmail.com>
Date:   Sun Nov 6 23:29:07 2022 +0800

    refacotr: app provide notifier

commit bfdd9ae8a3ba13d83856a4c2ed6658e7832c4c1e
Author: alswl <alswlx@gmail.com>
Date:   Sun Nov 6 15:04:59 2022 +0800

    fix: split task create and task modify payload, modify allowed empty

commit fdc5c713304b10ebe2ecae9131402ccc68cab5ea
Author: alswl <alswlx@gmail.com>
Date:   Sun Nov 6 13:55:00 2022 +0800

    fix: timeron

commit f3f9ec729df1fdd501a81222597698f9ffcef1c1
Author: alswl <alswlx@gmail.com>
Date:   Sun Nov 6 13:42:58 2022 +0800

    feat: enter start of stop poc

commit e6904f7d8d6048442baf0a5c7e38dbecab630a5f
Author: alswl <alswlx@gmail.com>
Date:   Sun Nov 6 10:27:11 2022 +0800

    feat: cli start and stop works

commit b531d60ee23689422efa3e89509f69b33eaa068c
Author: alswl <alswlx@gmail.com>
Date:   Sat Nov 5 15:15:20 2022 +0800

    feat: new notifier for statusbar
